--- a/plugins/livedesk/gui-resources/templates/layouts/livedesk.dust
+++ b/plugins/livedesk/gui-resources/templates/layouts/livedesk.dust
@@ -8,9 +8,9 @@
 	<ul class="nav nav-pills pull-left">	
     {!#blog!}
 		<li class="{ui.submenuActive1}"><a data-target="edit-blog" href="{BlogHref}">{Title|t}</a></li>
-		<li class="{ui.submenuActive2}"><a data-target="configure-blog" href="{BlogHref}">_("Configure Blog")</a></li>
-		<!--li class=""><a href="#">Manage collaborators</a></li>
-		<li class=""><a href="#">Manage feeds</a></li-->
+		<li class="{ui.submenuActive2}"><a data-target="configure-blog" href="{BlogHref}">_("Configure Blog");</a></li>
+		<li class="{ui.submenuActive3}"><a data-target="manage-collaborators-blog" href="{BlogHref}">_("Manage collaborators");</a></li>
+		<!--<li class=""><a href="#">Manage feeds</a></li-->
 	{!/blog!}	
     </ul>
     
