--- a/plugins/livedesk-embed/gui-resources/templates/default/item/source/flickr.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/source/flickr.dust
@@ -7,6 +7,8 @@
 			<div class="result-text"><p>{Meta.title}</p></div>
 {/body_content}
 {<body_bottom}
+	{?Meta.annotation}
 	<div class="editable annotation">{Meta.annotation|s}</div>
+	{/Meta.annotation}
 {/body_bottom}
 {<reference_name} flickr.com{/reference_name}
