--- a/plugins/livedesk-embed/gui-resources/templates/default/item/source/google.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/source/google.dust
@@ -6,6 +6,8 @@
 {<head_bottom}{/head_bottom}
 {<body_content}<div class="result-text">{Content|s}</div>{#Meta}{?tbUrl}<p><a href="{url}" target="_blank"><img src="{tbUrl|s}"/></a></p>{/tbUrl}{/Meta}{/body_content}
 {<body_bottom}
+	{?Meta.annotation}
 	<div class="editable annotation">{Meta.annotation|s}</div>
+	{/Meta.annotation}
 {/body_bottom}
 {<reference_name} {Meta.visibleUrl}{/reference_name}
