--- a/plugins/livedesk-embed/gui-resources/templates/default/item/source/twitter.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/source/twitter.dust
@@ -1,14 +1,14 @@
 {>"theme/item/base"/}
 {<class}twitterservice{/class}
 
-{<body_top}<div class="editable annotation">{Meta.annotation.before|s}</div>{/body_top}
+{<body_top}{?Meta.annotation.before}<div class="editable annotation">{Meta.annotation.before|s}</div>{/Meta.annotation.before}{/body_top}
 {<body_content}
 <blockquote class="twitter-tweet"><p>{Content}</p>&mdash;{Meta.from_user_name}(@{Meta.from_user_name})<a href="https://twitter.com/{Meta.from_user}/status/{Meta.id_str}" data-datetime="{Meta.created_at}"></a><blockquote>
 <script src="//platform.twitter.com/widgets.js"></script>
 </div>
 {/body_content}
 {<body_bottom}
-	<div class="editable annotation">{Meta.annotation.after|s}</div>
+	{?Meta.annotation.after}<div class="editable annotation">{Meta.annotation.after|s}</div>{/Meta.annotation.after}
 {/body_bottom}
 {<reference_name} twitter.com{/reference_name}
 
