NR-501 : Media Archive user interface implementation version 1.0
search

--- a/plugins/media-archive/gui-resources/templates/list.dust
+++ b/plugins/media-archive/gui-resources/templates/list.dust
@@ -2,18 +2,14 @@
 	<a href="javascript:void(0)" class="btn btn-large btn-info pull-right"
 		data-action="add-media"> <span class="media-archive-icon-add"></span>_('Add Media')</a>
   	<div class="searchbar-container">
-    	<input type="text" name="searchbar">
+    	<input type="text" name="searchbar" />
+    	<button data-action="search" class="pull-right">_('Search')</button>
     </div>
 </div>
   
 <section class="main-section">
 	<div class="main-sidebar-left scroller" id="sidebar">
-    	<div class="module">
-        </div>
-        <div class="module">
-        </div>
-        <div class="module">
-        </div>
+    	
 	</div>
     <div class="fake-sidebar"></div>
     <div class="main-content" id="main-content">
