--- a/plugins/livedesk/gui-resources/templates/providers/google/post.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/google/post.dust
@@ -4,7 +4,7 @@
     	<a href="#delete-post" data-toggle="modal" class="close image">x</a>
     	{?PublishedOn}<a href="#unpublish-post" data-toggle="modal" class="unpublish image">&nbsp;</a>{/PublishedOn}
     </div>
-    <div class="google-full-co[ntent">
+    <div class="google-full-content">
 	    <div class="result-content">
 			{#Meta}<h3><a href="{url}" target="_blank">{title|s}</a></h3>{/Meta}
 			<p class="result-text">
