--- a/plugins/media-archive/gui-resources/templates/sidebar/crit-string.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/crit-string.dust
@@ -1,8 +1,8 @@
 <div class="module" data-criteria="{id}">
 	<h3 class="header"><i class="icon-chevron-down"></i>{title}</h3>
 	<div class="module-row">
-		<label for="string" class="half">
-			<input class="date" id="string" type="text" />
+		<label for="string-{id}" class="half">
+			<input class="date" id="string-{id}" type="text" />
 		</label>
 	</div>
 </div>
