--- a/plugins/media-archive/gui-resources/templates/sidebar/crit-numeric.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/crit-numeric.dust
@@ -1,8 +1,8 @@
 <div class="module" data-criteria="{id}" {initial}>
 	<h3 class="header"><i class="icon-chevron-down"></i>{title}</h3>
 	<div class="module-row">
-		<label for="number" class="half">
-			<input class="date" id="number" type="text" />
+		<label for="number-{id}" class="half">
+			<input class="date" id="number-{id}" type="text" />
 		</label>
 	</div>
 </div>
