--- a/plugins/media-archive/gui-resources/templates/sidebar/crit-string.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/crit-string.dust
@@ -1,10 +1,3 @@
-<div class="module" data-criteria="{id}">
-	<h3 class="header"><i class="icon-chevron-down"></i>{title}</h3>
-	<div class="module-row">
-		<label for="string-{id}" class="half">
-			<input class="date" id="string-{id}" type="text" />
-		</label>
-	</div>
-</div>
+<input id="string-{id}" type="text" />
             
         
