NR-501 : Media Archive user interface implementation version 1.0
fixing an old commit, regarding the edit meta info which never got pushed through

--- a/plugins/media-archive/gui-resources/templates/types/_default/edit.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/edit.dust
@@ -41,5 +41,5 @@
 </div>
 {/meta}
 {<footer}
-	<button class="btn">_('save')</button>
+	<button class="btn" data-action="save">_('Save')</button>
 {/footer}
