NR-501 : Media Archive user interface implementation version 1.0
video and audio enabled

--- a/plugins/media-archive-image/gui-resources/templates/media-archive/edit.dust
+++ b/plugins/media-archive-image/gui-resources/templates/media-archive/edit.dust
@@ -27,5 +27,5 @@
 {/meta}
 
 {<footer}
-	<button class="btn" data-action="save">_('Save')</button>
+	<button class="btn" data-action="save" data-dismiss="modal">_('Save')</button>
 {/footer}
