NR-399 : User sorting (first name, last name, login, e-mail, creation date) should be implemented
implemented

--- a/plugins/superdesk-user/gui-resources/templates/item.dust
+++ b/plugins/superdesk-user/gui-resources/templates/item.dust
@@ -7,6 +7,7 @@
 	<td>{LastName}</td>
 	<td>{Name}</td>
 	<td>{EMail}</td>
+	<td>{CreatedOn}</td>
 	<td>    
 		<div class="btn-group">
     		<button class="btn edit">_('Edit')</button>
