--- a/plugins/livedesk-embed/gui-resources/templates/default/item/base.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/base.dust
@@ -5,6 +5,7 @@
 		<div class="post_info">
 			<time>{CreatedOn}</time>
 			<p rel="author">_('by'); {AuthorName}</p>
+			<a href="#" class="sf-share">_('Share')</a>
 			<a href="#{HashIdentifier}{Order}" rel="bookmark">#</a>
 			<input type="text" data-type="permalink" style="visibility:hidden" value="{permalink}">
 		</div>
