NR-35: Media Archive user interface implementation version 1.0
Fix sidebar type filters.

--- a/plugins/media-archive/gui-resources/templates/sidebar/types.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/types.dust
@@ -26,7 +26,7 @@
         {#Types}
             <li icon="{Type}">
             	<label for="filter-{Type}">
-            		<span class="treemenuicon photo">{Type}</span>
+            		<span class="treemenuicon {Type}">{Type}</span>
             		<input type="checkbox" class="check" id="filter-{Type}" value="{Type}" />
             	</label>
             </li>
