NR-287 : Post sharing to social media sites
Added share to email and IE fixes

--- a/plugins/livedesk-embed/gui-resources/templates/default/livedesk.css
+++ b/plugins/livedesk-embed/gui-resources/templates/default/livedesk.css
@@ -572,3 +572,6 @@ li#loading-more{
 .social.pinterest {
     background: url(img/social_pinterest_color.png) no-repeat;
 }
+.social.email {
+    background: url(img/social_email_color.png) no-repeat;
+}
