--- a/plugins/livedesk-embed/gui-resources/templates/default/item/social-share.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/social-share.dust
@@ -4,4 +4,5 @@
 	<a href="#" class='social linkedin' title="_('Share this post on Linkedin')" onclick="{linclick}"></a>
 	<a href="#" class='social pinterest' title="_('Share this post on Pinterest')" onclick="{pinclick}"></a>
 	<a href="#" class='social google' title="_('Share this post on Google+;')" onclick="{gglclick}"></a>
+	<a href="{emailurl}" class='social email' title="_('Share this post via Email;')" target="_blank"></a>
 </div>	
