NR-501: Media Archive user interface implementation version 1.0
Search buttons and sidebar type filters html

--- a/plugins/media-archive/gui-resources/templates/list.dust
+++ b/plugins/media-archive/gui-resources/templates/list.dust
@@ -4,7 +4,7 @@
 		data-action="add-media"> <span class="media-archive-icon-add"></span>_('Add Media')</a>
   	<div class="searchbar-container">
     	<input type="text" name="search" />
-    	<button data-action="search" class="pull-right">_('Search')</button>
+    	<button data-action="search" class="btn pull-right">_('Search')</button>
     </div>
 </div>
   
