--- a/plugins/media-archive/gui-resources/templates/list.dust
+++ b/plugins/media-archive/gui-resources/templates/list.dust
@@ -1,14 +1,4 @@
-<span id="media-archive">
-<div class="subnav subnav-fixed">
-	<a href="javascript:void(0)" class="btn btn-large btn-info pull-right"
-		data-action="add-media"> <span class="media-archive-icon-add"></span>_('Add Media')</a>
-  	<div class="searchbar-container">
-    	<input type="text" name="search" />
-    	<button data-action="search" class="btn pull-right">_('Search')</button>
-    </div>
-</div>
-  
-<section class="main-section">
+<section class="main-section" style="top:41px">
 
 	<div class="main-sidebar-left scroller" id="sidebar">
     	
@@ -22,7 +12,13 @@
             <span class="info">({#pagination}{total}{/pagination})</span>
             
         
-            <div class="btn-group pull-right">
+        	<div class="btn-toolbar pull-right">
+        		<div class="btn-group">
+        			<a href="javascript:void(0)" class="btn btn-info pull-right"
+					data-action="add-media"> <span class="media-archive-icon-add"></span>_('Add Media')</a>
+				</div>
+	            <div class="btn-group">
+            
             	<a href="javascript:void(0)" class="btn"><i class="icon-settings"></i></a>
             	<a href="javascript:void(0)" data-toggle="dropdown" class="btn dropdown-toggle"><span class="caret"></span></a>
             		<ul class="dropdown-menu">
@@ -38,6 +34,7 @@
                         <li><a href="javascript:void(0)" id="grid_view"><i class="icon-th"></i> Grid view</a></li>
                 		<li><a href="javascript:void(0)" id="list_view"><i class="icon-th-list"></i> List view</a></li>
               		</ul>
+              	</div>
           	</div>
             
    			<!--div style="margin-right:10px;" class="btn-group pull-right">
@@ -76,4 +73,5 @@
     </div>
 	
 </section>
+
 </span>
