NR-544: Livedesk embed doesn't work in ie
Lost in merge: fixed!

--- a/plugins/livedesk-embed/gui-resources/templates/default/item/source/flickr.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/source/flickr.dust
@@ -1,5 +1,5 @@
 {>"theme/item/base"/}
-{<class}flickrservice{/class}
+{<item_class}flickrservice{/item_class}
 {<body_content}
 			<a href="http://farm{Meta.farm}.staticflickr.com/{Meta.server}/{Meta.id}_{Meta.secret}.jpg" target="_blank">
 				<img alt="{Meta.title}" src='http://farm{Meta.farm}.staticflickr.com/{Meta.server}/{Meta.id}_{Meta.secret}.jpg'>
