--- a/plugins/livedesk-embed/gui-resources/templates/default/item/source/soundcloud.dust
+++ b/plugins/livedesk-embed/gui-resources/templates/default/item/source/soundcloud.dust
@@ -1,6 +1,6 @@
 {>"theme/item/base"/}
 
-{<class}soundcloudservice{/class}
+{<item_class}soundcloudservice{/item_class}
 {<body_content}
 	<iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F{Meta.id}&show_artwork=true"></iframe>		
 {/body_content}
