NR-399: User column sorting should be implemented
User sorting CSS, new class added

--- a/plugins/superdesk-user/gui-resources/templates/list.dust
+++ b/plugins/superdesk-user/gui-resources/templates/list.dust
@@ -23,7 +23,7 @@
 		</div>
 		{~s}
 		<button style="margin: 10px 0" class="btn btn-primary add-user">_('Add User')</button>
-		<table class="table table-hover table-bordered">
+		<table class="table table-hover table-bordered table-sort" >
 			<thead>
 				<tr>
 	    			<th>#</th>
