--- a/plugins/media-archive/gui-resources/templates/sidebar/types.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/types.dust
@@ -35,6 +35,17 @@
         </ul>
 	</div>
 </div>
-<span data-placeholder="modules">
-
-</span>
+<div class="module">
+    <h3 class="header"><i class="icon-chevron-down"></i>Date</h3>
+    <div class="module-row">
+    	
+        <label class="half" for="date_from">from
+        	<input type="text" id="date_from" class="date">
+        </label>
+        
+        <label class="half" for="date_to">to
+         	<input type="text" id="date_to" class="date">
+        </label>
+    </div>
+    
+</div>
