NR-501: Media Archive user interface implementation version 1.0
Media archive HTML fixies.

--- a/plugins/media-archive/gui-resources/templates/types/_default/grid.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/grid.dust
@@ -10,7 +10,7 @@
 	{/side}
 !}
 
-<div class="media-box" style="-moz-user-select: none;">
+<div class="media-box {Item.Type}" style="-moz-user-select: none;">
 	<figure>
     	{+body}
     		{#Item}
