--- a/plugins/media-archive/gui-resources/templates/list.dust
+++ b/plugins/media-archive/gui-resources/templates/list.dust
@@ -12,7 +12,7 @@
             <span class="info">({#pagination}{total}{/pagination})</span>
             
         
-        	<div class="btn-toolbar pull-right">
+        	<div class="btn-toolbar pull-right" style="margin:0;">
         		<div class="btn-group">
         			<a href="javascript:void(0)" class="btn btn-info pull-right"
 					data-action="add-media"> <span class="media-archive-icon-add"></span>_('Add Media')</a>
@@ -49,7 +49,7 @@
         </div>
         <div class="main-content-subnav">
        		{#pagination}
-			<div class="pagination">
+			<div class="pagination" style="margin:0;">
 			{?currentpages}
 			<ul class="{className}">
 				<li> <a href="javascript:void(0)" data-pagination="first" title="_('First')">&#8676;</a> </li>
