NR-560: User ends up on Manage Collaborators page as a result of clicking on Collaborators vertical tab
Fixed.
Check one event.
Person from collaborator has changed.

--- a/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-collaborators.dust
+++ b/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-collaborators.dust
@@ -6,7 +6,7 @@
 <ul class="plain-table">
   <li class="search-waiting" style="display: none;">
     _("Searching"); &nbsp;&nbsp;
-    <img src="img/searching.gif"></li>
+    <img src="images/searching.gif"></li>
 </ul>
 </div>
 
