--- a/plugins/livedesk/gui-resources/templates/manage-collaborators/add-internal-collaborator.dust
+++ b/plugins/livedesk/gui-resources/templates/manage-collaborators/add-internal-collaborator.dust
@@ -1,10 +1,10 @@
 <li>
   <input type="checkbox" class="select-colaborator" name="internalCollaborator1" group="internalCollaborators">
   <figure>
-    <img src="img/avatar_default_collaborator.png" width="32" height="32" />
+    <img src="images/avatar_default_collaborator.png" width="32" height="32" />
   </figure>
-  <span class="add-collaborator-name">{Name}</span>
-  <span>{#Person}{EMail}{/Person}</span>
+  <span class="add-collaborator-name">{#User}{FullName}{/User}</span>
+  <span>{#User}{EMail}{/User}</span>
   <div class="dropdown dropdown-simple">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       View only <b class="caret"></b>
