--- a/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-colabs.dust
+++ b/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-colabs.dust
@@ -1,5 +1,5 @@
 {#Colab}
-	{?Person}
+	{?User}
 	<li class="">
 		<label class="checkbox">
 	    	<input type="checkbox" value="{Id}" data-key="Id" />
@@ -8,14 +8,14 @@
 			<a href="{Person.href}" class="tool-box-button"><i class="icon-pencil"></i></a>
 		</div-->
 		<figure>
-			{#Person}{?Avatar}
+			{?Avatar}
                 <img src="{Avatar}" />
-			{/Avatar}{/Person}
+			{/Avatar}
 		</figure>
 		<div class="collaborators-content">
 			<h3>{Name}</h3>
 		</div>
 		<div class="clear"></div>
 	</li>
-	{/Person}
+	{/User}
 {/Colab}
