--- a/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-collaborator.dust
+++ b/plugins/livedesk/gui-resources/templates/manage-collaborators/internal-collaborator.dust
@@ -1,12 +1,12 @@
 <li>
   {+item_header}{/item_header}
   <figure>
-      {#Person}{?Avatar}
+      {#User}{?Avatar}
                 <img src="{Avatar}" />
-      {/Avatar}{/Person}
+      {/Avatar}{/User}
   </figure>
   <a href="#" class="collaborator-name">{Name}</a>
-  <span data="collaborator_name">{#Person}{FullName}{/Person}</span>
+  <span data="collaborator_name">{#User}{FullName}{/User}</span>
   <div class="table-buttons">
     <a title="delete collaborator" data-toggle="modal" href="#delete_internal_collaborator"> <i class="icon-remove"></i>
     </a>
