--- a/plugins/media-archive/gui-resources/templates/sidebar/types.dust
+++ b/plugins/media-archive/gui-resources/templates/sidebar/types.dust
@@ -13,8 +13,8 @@
 		<div id="open-filter" class="open-filter-button"></div>
 		<ul id="MAFilterResults" class="filter-list hide" style="position: absolute; top: 24px;"></ul>
 		<div class="filter-value-container"></div>
-		<button data-action="save-filter" class="btn btn-mini" type="submit" style="margin-top:5px;float:left">save filter</button>
-        <button data-action="search" class="pull-right" type="button">_('Search')</button>
+		<button data-action="save-filter" class="btn btn-mini" type="submit" style="display:none;margin-top:5px;float:left">save filter</button>
+        <button data-action="search" class="pull-right" type="button" style="display:none">_('Search')</button>
 		<ul id="tag-container" class="tag-container clearfix"></ul>
 	</div>
 </form>
