NR-567: Manage Collaborators -> The newly created users were NOT added to the list of potential collaborators
Fixed.

--- a/plugins/livedesk/gui-resources/templates/providers/colabs/items.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/colabs/items.dust
@@ -3,13 +3,13 @@
 	data-colab-id="{Creator.Id}" data-post-id="{Id}">
 	<div class="drag-bar"></div>
 	<figure>
-        {#Person}
+        {#AuthorPerson}
             {?Avatar}
                 <img src="{Avatar}" />
             {:else}
                 <img src="images/avatar_default_collaborator.png" />
-            {/Avatar}
-        {/Person}
+            {/AuthorPerson}
+        {/User}
 	</figure>
 	<div class="result-content">
     	<h3><span class="author">{AuthorName}</span></h3>
