NR-501: Media Archive user iterface implementation version 1.0
First step of listing HTML fix.

--- a/plugins/media-archive/gui-resources/templates/types/_default/list-hover.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/list-hover.dust
@@ -7,7 +7,7 @@
 	{/side}
 !}
 
-<div class="media-box-list" style="-moz-user-select: none; top: -1995px; left: 0px;">
+<div class="media-box-hover-list" style="-moz-user-select: none;">
   	
   	{+body}
 	  	{#Item}
