--- a/plugins/media-archive/gui-resources/templates/types/_default/list.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/list.dust
@@ -7,7 +7,7 @@
 	{/side}
 !}
 
-<div class="media-box-list" style="-moz-user-select: none; top: -1995px; left: 0px;">
+<div class="media-box {Item.Type}" style="-moz-user-select: none;">
   	
   	{+body}
 	  	{#Item}
