NR-359 : Implement "Link" post type
Did the UI wireframe

--- a/plugins/livedesk/gui-resources/templates/providers/edit/link.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/edit/link.dust
@@ -1,4 +1,4 @@
-	<div>{title}</div>
+	<div>{url}</div>
 	<div class="link-preview">
 		<figure class="link-thumbnail"> 
 			<img src="http://uidesign.lab.sourcefabric.org/liveblog/embed/wikitest.jpg">
