NR-501: Media Archive user interface implementation version 1.0
Step 3 - HTML

--- a/plugins/media-archive/gui-resources/templates/list.dust
+++ b/plugins/media-archive/gui-resources/templates/list.dust
@@ -67,7 +67,7 @@
 			{/pagination}
         </div>
         
-        <div class="main-content-inner media-library-main-content-inner grid scroller" style="top:100px">
+        <div class="main-content-inner media-library-main-content-inner grid scroller">
 		</div>
           
     </div>
