--- a/plugins/media-archive/gui-resources/templates/types/_default/list.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/list.dust
@@ -8,36 +8,20 @@
 !}
 
 <div class="media-box {Item.Type}" style="-moz-user-select: none;">
-  	
-  	{+body}
-	  	{#Item}
-		<figure>{Content|s}</figure>
-		
-		<!--div class="actions-left">
-			<div class="media-box-button top left"><a href="#"><i class="icon-plus-small"></i></a></div>
-		    <a data-placement="bottom" rel="tooltip" class="add-to-scratchpad" href="#" data-original-title="add to scratchpad"></a>
-		    <span style="display:none; position:absolute" class="label label-important alertAlreadyAdded">_('already added')</span>
-		</div-->
-		
-		<div class="media-info">
-			<h5>{Name}</h5>
-		    <!--dl>
-		        <dt>Source</dt><dd>4</dd>
-		    </dl-->           
-		</div>
-		{/Item}
-    {/body}
+  	<figure>
+    	{+body}
+    		{#Item}
+		    	{Content|s}
+	        {/Item}
+        {/body}
+        {+side}
+		{/side}
+	</figure>
 
-	{+side}
-	<div class="actions-right">
-    	<div class="btn-group">
-        	<button class="btn btn-mini">_('Action')</button>
-			<button data-toggle="dropdown" class="btn btn-mini dropdown-toggle">
-            	<span class="caret"></span>
-			</button>
-			{>"media-archive>types/_default/menu"/}
-        </div>
-    </div>
-    {/side}
+	{+title}
+	{#Item}
+    	<h5>{?Title}{Title}{:else}{Name}{/Title}</h5>
+    {/Item}
+    {/title}
     
 </div>
