NR-220: blog types
added Views

--- a/plugins/livedesk/gui-resources/templates/blogtype/blogtype.dust
+++ b/plugins/livedesk/gui-resources/templates/blogtype/blogtype.dust
@@ -5,11 +5,12 @@
     <label class="radio">
         <input type="radio" value="{Id}" name="blogtypeselection">
     </label>
-    
+    {^add}
     <div class="tool-box-right">
       <a class="tool-box-button" href="#"><i class="icon-remove"></i></a>
       <a class="tool-box-button" name="openmodal" href="#"><i class="icon-pencil"></i></a>
     </div>
+    {/add}
     <h3>{Name}</h3>
   </div>
   <div class="blogtype-content">
