--- a/plugins/livedesk/gui-resources/templates/blogtype/add.dust
+++ b/plugins/livedesk/gui-resources/templates/blogtype/add.dust
@@ -26,7 +26,7 @@
   <div screenid="1" class="modalscreen">
 
     <div class="modal-header"> <a data-dismiss="modal" class="close">×</a>
-      <h3>Create new Post Type</h3>
+      <h3>_("Create new Post");</h3>
     </div>
   
     <div class="modal-body">
