NR-501: Media Archive user interface implementation version 1.0
HTML and CSS for listing fixed.

--- a/plugins/media-archive/gui-resources/templates/types/_default/list.dust
+++ b/plugins/media-archive/gui-resources/templates/types/_default/list.dust
@@ -8,20 +8,21 @@
 !}
 
 <div class="media-box {Item.Type}" style="-moz-user-select: none;">
+  	{+body}
+  	{#Item}
   	<figure>
-    	{+body}
-    		{#Item}
-		    	{Content|s}
-	        {/Item}
-        {/body}
-        {+side}
-		{/side}
+		{Content|s}
 	</figure>
 
-	{+title}
-	{#Item}
-    	<h5>{?Title}{Title}{:else}{Name}{/Title}</h5>
-    {/Item}
-    {/title}
+	<div class="media-info">
+			{+title}
+		    	<h5>{?Title}{Title}{:else}{Name}{/Title}</h5>
+		    {/title}
+		</div>
+
+	{/Item}
+    {/body}
+
+	
     
 </div>
