--- a/plugins/livedesk/gui-resources/templates/add.dust
+++ b/plugins/livedesk/gui-resources/templates/add.dust
@@ -1,4 +1,4 @@
-<div class="modal fade modal modal-wide" id="addBlog">
+<div class="modal fade modal modal-wide" id="add-live-blog">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">x</a>
     <h3>_('Add Live blog')</h3>
@@ -25,7 +25,7 @@
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal">_("Cancel");</a>
-    <a href="#" class="btn save btn-primary" data-dismiss="modal">_("Save changes");</a>
+    <a href="#" class="btn save btn-primary">_("Save changes");</a>
   </div>
 </div>
 
