NR-474: Refactor the collaborators setup in the blog configuration screen
Fixed merge issues
Added Avatar in add screen

--- a/plugins/livedesk/gui-resources/templates/manage-collaborators/add-internal-collaborator.dust
+++ b/plugins/livedesk/gui-resources/templates/manage-collaborators/add-internal-collaborator.dust
@@ -1,7 +1,9 @@
 <li>
   <input type="checkbox" class="select-colaborator" name="internalCollaborator1" group="internalCollaborators">
   <figure>
-    <img src="images/avatar_default_collaborator.png" width="32" height="32" />
+      {#User}{?Avatar}
+                <img src="{Avatar}" />
+      {/Avatar}{/User}
   </figure>
   <span class="add-collaborator-name">{#User}{FullName}{/User}</span>
   <span>{#User}{EMail}{/User}</span>
